# mario-clone

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
resources/: config.json
resources/levels/: 1-1.lvl  1-2.lvl  levels.json  other.lvl  test.lvl
resources/textures/: info.json  paths.json
src/: background.rs  block.rs  config.rs  controller.rs  editor.rs  enemy.rs  entity.rs  game.rs  hitbox.rs  interface.rs  keybindings.rs  level.rs  main.rs  menu.rs  movement.rs  object.rs  physics.rs  player.rs  render.rs  resource.rs  state.rs  texture_id.rs  utility.rs
