[package]
name = "mario-clone"
version = "0.1.0"
authors = ["Jakub Grobelny <jgrobelny1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.32.2"
serde_json = "1.0.44"
serde = { version = "1.0.44", features = ["derive"] }
