[package]
name = "mario-clone"
version = "0.1.0"
authors = ["Jakub Grobelny <jgrobelny1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.32.2", features = ["ttf", "image"] } 
serde_json = "1.0.44"
serde = { version = "1.0.44", features = ["derive"] }
vector2d = "2.2.0"
num-traits = "0.2.11"
num-derive = "0.3.0"
